# RRC21

./: .gitignore  .gitmodules  README.md  after_launch.sh  evaluate_policy.py  image.def  package.xml  problemlog.todo.md  roboch.json  run  setup.cfg  setup.py
.vim/: coc-settings.json
log/: latest_build
scripts/: download_logs.sh  trifinger_platform_log_viewer.py  visualize.sh  visualize_dice.sh
submission/alt_policies/: fingers.py  move_finger.py  states.py
submission/alt_scripts/: run_move_finger.py
submission/combined_code/: __init__.py
submission/control/: one_finger.py
submission/cpc/states/: base_states.py
submission/dice/: plan.py
submission/dice/pddl/: doman.pddl  stream.pddl
submission/dice_pose/: estimate_dice_pose.py
submission/env/: cube_env.py  make_env.py  reward_fns.py  wrappers.py
submission/mp/: action_sequences.py  const.py  state_machines.py  utils.py
submission/mp/base_policies/: __init__.py  fc.py  mpfc.py
submission/mp/grasping/: collision_config.py  grasp_functions.py  grasp_metric_sampling.py  grasp_motions.py  grasp_sampling.py  ik.py  wholebody_planning.py
submission/mp/metric/: __init__.py  inference.py  learner.py  utils.py
submission/mp/states/: base_states.py  sequences.py  state_machine.py
submission/residual_learning/: make_training_env.py
submission/rrc_example_package/: cube_trajectory_env.py  example.py  rearrange_dice_env.py
submission/rrc_example_package/scripts/: dice_example_with_gym.py  real_trajectory_example_with_gym.py  real_trajectory_example_with_gym_dup.py  sim_dice_example_with_gym.py
(+7 files in other folders)
