<?xml version="1.0"?>
<package format="2">
  <name>rrc21</name>
  <version>2.0.0</version>
  <description>
      Real Robot Challenge Submission from the RAD group, University of Edinburgh.
  </description>

  <maintainer email="a.kamireddypalli@sms.ed.ac.uk">Aditya Kamireddypalli</maintainer>

  <license>BSD 3-clause</license>

  <url type="website">https://real-robot-challenge.com/</url>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>robot_fingers</exec_depend>
  <exec_depend>robot_interfaces</exec_depend>
  <exec_depend>ament_index_python</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
